src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>CASE(Suffix__c, 
&quot;0011&quot;,&quot;Puritan&apos;s Pride&quot;, 
&quot;0070&quot;,&quot;Vitamin World&quot;,
&quot;0021&quot;,&quot;Perfectly Pure&quot;,
NULL)</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Status__c</fullName>
        <label>Coupon Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offers__c</fullName>
        <label>Offers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_TYPE__c</fullName>
        <label>Promo_TYPE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCID__c</fullName>
        <externalId>true</externalId>
        <label>SCID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceCode__c</fullName>
        <label>SourceCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code_Status__c</fullName>
        <label>Source_Code_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_ID__c</fullName>
        <label>WS ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>Natures_Origin_Promotions</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Program__c</columns>
        <columns>Offers__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Promo_TYPE__c</columns>
        <columns>Coupon_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Suffix__c</field>
            <operation>equals</operation>
            <value>0022</value>
        </filters>
        <label>Nature&apos;s Origin Promotions</label>
    </listViews>
    <listViews>
        <fullName>Perfectly_Pure_Promotions</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Program__c</columns>
        <columns>Offers__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Promo_TYPE__c</columns>
        <columns>Coupon_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Suffix__c</field>
            <operation>equals</operation>
            <value>0021</value>
        </filters>
        <label>Perfectly Pure Promotions</label>
    </listViews>
    <listViews>
        <fullName>Puritan_s_Pride_Promotions</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Program__c</columns>
        <columns>Offers__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Promo_TYPE__c</columns>
        <columns>Coupon_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Suffix__c</field>
            <operation>equals</operation>
            <value>0011</value>
        </filters>
        <label>Puritan&apos;s Pride Promotions</label>
    </listViews>
    <listViews>
        <fullName>Vitamin_World_Promotions</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Program__c</columns>
        <columns>Offers__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Promo_TYPE__c</columns>
        <columns>Coupon_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Suffix__c</field>
            <operation>equals</operation>
            <value>0070</value>
        </filters>
        <label>Vitamin World Promotions</label>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>